--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,18 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        mavenCentral()
+    }
+    plugins {
+        id 'io.micronaut.application' version '3.1.1'
+        id 'com.microsoft.azure.azurefunctions' version '1.4.0'
+    }
+}
+
 plugins {
     id "com.gradle.enterprise" version "3.8.1"
     id 'com.gradle.common-custom-user-data-gradle-plugin' version '1.6.2'
+    id 'io.micronaut.build.shared.settings' version '5.1.1'
 }
 
 gradleEnterprise {
