--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -8,12 +8,28 @@ repositories {
     gradlePluginPortal()
 }
 
+configurations.all {
+    resolutionStrategy {
+        eachDependency { details ->
+            if (details.requested.group == 'org.codehaus.groovy') {
+                details.useVersion '3.0.9'
+                details.because 'Groovy 2.5.x not supported by Gradle 7.0+'
+            }
+        }
+    }
+}
+
 dependencies {
     implementation "com.fizzed:rocker-compiler:1.3.0"
     implementation "com.fasterxml.jackson.core:jackson-databind:2.11.0"
     implementation "io.sdkman:gradle-sdkvendor-plugin:2.0.0"
     implementation "org.asciidoctor:asciidoctor-gradle-jvm:2.4.0"
+    implementation "com.diffplug.spotless:spotless-plugin-gradle:6.3.0"
+    implementation "io.spring.nohttp:nohttp-gradle:0.0.10"
+    implementation "org.gradle:test-retry-gradle-plugin:1.3.1"
     implementation "gradle.plugin.com.github.johnrengelman:shadow:7.1.2"
+    implementation "io.github.groovylang.groovydoc:io.github.groovylang.groovydoc.gradle.plugin:1.0.1"
+    implementation "io.github.gradle-nexus:publish-plugin:1.1.0"
 }
 
 gradlePlugin {
