--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ if (!ossUser.isEmpty() && !ossPass.isEmpty()) {
                 allowInsecureProtocol = rootProject.hasProperty("allowInsecurePublishing")
                 username = ossUser
                 password = ossPass
+                stagingProfileId = System.getenv("SONATYPE_STAGING_PROFILE_ID")
                 nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
                 snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
             }
