--- a/grails-forge-core/build.gradle
+++ b/grails-forge-core/build.gradle
@@ -21,7 +21,7 @@ dependencies {
     api "io.micronaut:micronaut-http"
     api "io.micronaut:micronaut-http-client"
     api "io.github.java-diff-utils:java-diff-utils:4.11"
-    api 'org.eclipse.jgit:org.eclipse.jgit:6.0.0.202111291000-r'
+    api "org.eclipse.jgit:org.eclipse.jgit:5.11.1.202105131744-r"
     implementation "org.yaml:snakeyaml:1.29"
     implementation 'com.typesafe:config:1.4.2'
     implementation 'org.apache.commons:commons-compress:1.21'
