--- a/grails-forge-core/src/main/resources/pom.xml
+++ b/grails-forge-core/src/main/resources/pom.xml
@@ -28,11 +28,6 @@
             <version>2.3.1</version>
         </dependency>
         <dependency>
-            <groupId>org.mongodb</groupId>
-            <artifactId>mongodb-driver-sync</artifactId>
-            <version>4.0.5</version>
-        </dependency>
-        <dependency>
             <groupId>org.grails.plugins</groupId>
             <artifactId>hibernate5</artifactId>
             <version>7.2.1</version>
@@ -86,6 +81,41 @@
             <groupId>org.grails.plugins</groupId>
             <artifactId>grails-console</artifactId>
             <version>2.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>gradle.plugin.com.github.erdi.webdriver-binaries</groupId>
+            <artifactId>webdriver-binaries-gradle-plugin</artifactId>
+            <version>2.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-api</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-support</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-remote-driver</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-chrome-driver</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-firefox-driver</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.bertramlabs.plugins</groupId>
+            <artifactId>asset-pipeline-grails</artifactId>
+            <version>3.3.4</version>
         </dependency>
     </dependencies>
 </project>
