--- a/grails-forge-core/build.gradle
+++ b/grails-forge-core/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'com.typesafe:config:1.4.2'
     implementation 'org.apache.commons:commons-compress:1.21'
     compileOnly "com.google.code.findbugs:jsr305"
+    testImplementation "org.codehaus.groovy:groovy-yaml"
 }
 
 
