--- a/buildSrc/src/main/groovy/org.grails.forge.internal.base-module.gradle
+++ b/buildSrc/src/main/groovy/org.grails.forge.internal.base-module.gradle
@@ -35,7 +35,7 @@ configurations {
 }
 
 nohttp {
-    source.exclude "src/test/**", "build/**"
+    source.exclude "src/test/**", "build/**", "src/resources/assets"
 }
 
 spotless {
