Exclude assets for NoHttp check
Update plugin org.grails.forge.internal.base-module.gradle

--- a/buildSrc/src/main/groovy/org.grails.forge.internal.base-module.gradle
+++ b/buildSrc/src/main/groovy/org.grails.forge.internal.base-module.gradle
@@ -35,7 +35,7 @@ configurations {
 }
 
 nohttp {
-    source.exclude "src/test/**", "build/**", "src/resources/assets"
+    source.exclude "src/test/**", "build/**", "src/main/resources/assets/**", "src/resources/main/pom.xml"
 }
 
 spotless {
