--- a/settings.gradle
+++ b/settings.gradle
@@ -40,3 +40,5 @@ rootProject.name = 'grails-forge'
 include 'grails-forge-core'
 include 'grails-cli'
 include 'test-core'
+include 'grails-forge-api'
+include 'grails-forge-web-netty'
