--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 projectVersion=1.0.0-SNAPSHOT
 micronautBuildVersion=1.1.5
+micronautDocsVersion=2.0.0
 micronautVersion=3.8.0
 rockerVersion=1.3.0
 groovyVersion=3.0.14
