Add Gradle SDKMan Configurations

--- a/grails-cli/build.gradle
+++ b/grails-cli/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id "org.grails.forge.internal.build.cli-module"
 }
 
-
 sourceSets {
     main {
         rocker {
@@ -50,4 +49,20 @@ rocker {
 
 startScripts {
     applicationName = 'grails'
+}
+
+sdkman {
+    api = "https://vendors.sdkman.io"
+    consumerKey = System.getenv("GVM_SDKVENDOR_KEY") ?: project.hasProperty("gvmSdkvendorKey") ? project.gvmSdkvendorKey : ''
+    consumerToken = System.getenv("GVM_SDKVENDOR_TOKEN") ?: project.hasProperty("gvmSdkvendorToken") ? project.gvmSdkvendorToken : ''
+    candidate = "grails"
+    version = project.version
+    hashtag = "#grailsfw"
+    platforms = [
+            // TODO:  Once graal native-image works for arm OSX, we should switch to building and publishing a non-rosetta release (https://github.com/oracle/graal/issues/2666)
+            "MAC_ARM64":"https://github.com/grails/grails-forge/releases/download/v${project.version}/grails-darwin-amd64-v${project.version}.zip",
+            "MAC_OSX":"https://github.com/grails/grails-forge/releases/download/v${project.version}/grails-darwin-amd64-v${project.version}.zip",
+            "WINDOWS_64":"https://github.com/grails/grails-forge/releases/download/v${project.version}/grails-win-amd64-v${project.version}.zip",
+            "LINUX_64":"https://github.com/grails/grails-forge/releases/download/v${project.version}/grails-linux-amd64-v${project.version}.zip"
+    ]
 }
