--- a/grails-forge-core/src/main/resources/pom.xml
+++ b/grails-forge-core/src/main/resources/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>org.grails</groupId>
             <artifactId>grails-gradle-plugin</artifactId>
-            <version>5.3.0</version>
+            <version>6.0.0-M2</version>
         </dependency>
         <dependency>
             <groupId>org.grails.plugins</groupId>
@@ -115,6 +115,11 @@
         <dependency>
             <groupId>com.bertramlabs.plugins</groupId>
             <artifactId>asset-pipeline-grails</artifactId>
+            <version>3.4.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.bertramlabs.plugins</groupId>
+            <artifactId>asset-pipeline-gradle</artifactId>
             <version>3.4.4</version>
         </dependency>
         <dependency>
