--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -15,13 +15,16 @@ configurations.all {
                 details.useVersion '3.0.9'
                 details.because 'Groovy 2.5.x not supported by Gradle 7.0+'
             }
+            if (details.requested.group.startsWith("com.fasterxml.jackson")) {
+                details.useVersion("2.15.0-rc1")
+            }
         }
     }
 }
 
 dependencies {
     implementation "com.fizzed:rocker-compiler:1.3.0"
-    implementation "com.fasterxml.jackson.core:jackson-databind:2.14.2"
+    implementation "com.fasterxml.jackson.core:jackson-databind:2.15.0-rc1"
     implementation "io.sdkman:gradle-sdkvendor-plugin:3.0.0"
     implementation "org.asciidoctor:asciidoctor-gradle-jvm:3.3.2"
     implementation "com.diffplug.spotless:spotless-plugin-gradle:6.15.0"
