--- a/grails-cli/build.gradle
+++ b/grails-cli/build.gradle
@@ -14,6 +14,12 @@ ext {
     picocliVersion = '4.7.1'
 }
 
+configurations.all {
+    resolutionStrategy {
+        // prevent fatJar result containing multiple versions of picocli
+        force("info.picocli:picocli:$picocliVersion")
+    }
+}
 
 configurations {
     generateConfig
