--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id "io.github.gradle-nexus.publish-plugin"
+    id "org.grails.forge.internal.aggregator"
 }
 
 version project.projectVersion
