Fix syntax of native image resource config

--- a/grails-cli/src/main/resources/META-INF/native-image/org.grails.forge.cli/grails-forge-cli/resource-config.json
+++ b/grails-cli/src/main/resources/META-INF/native-image/org.grails.forge.cli/grails-forge-cli/resource-config.json
@@ -1,5 +1,7 @@
 {
-  "resources": [
-    {"pattern":"org/jline/utils/.*$"}
-  ]
+  "resources": {
+    "includes": [
+      {"pattern":"org/jline/utils/.*$"}
+    ]
+  }
 }
