--- a/grails-forge-core/src/main/resources/META-INF/native-image/org.grails.forge/grails-forge-core/resource-config.json
+++ b/grails-forge-core/src/main/resources/META-INF/native-image/org.grails.forge/grails-forge-core/resource-config.json
@@ -1,12 +1,14 @@
 {
-  "resources": [
-    {"pattern":"assets/.*$"},
-    {"pattern":"gradle/.*$"},
-    {"pattern":"gsp/.*$"},
-    {"pattern":"i18n/.*$"},
-    {"pattern":".gitkeep"},
-    {"pattern":"springloaded/.*$"},
-    {"pattern":"\\Qgrails-versions.properties\\E"},
-    {"pattern":"pom.xml"}
-  ]
+  "resources": {
+    "includes": [
+      {"pattern":"assets/.*$"},
+      {"pattern":"gradle/.*$"},
+      {"pattern":"gsp/.*$"},
+      {"pattern":"i18n/.*$"},
+      {"pattern":".gitkeep"},
+      {"pattern":"springloaded/.*$"},
+      {"pattern":"\\Qgrails-versions.properties\\E"},
+      {"pattern":"pom.xml"}
+    ]
+  }
 }
