--- a/grails-forge-web-netty/src/main/resources/META-INF/native-image/org.grails.forge/grails-forge-web-netty/resource-config.json
+++ b/grails-forge-web-netty/src/main/resources/META-INF/native-image/org.grails.forge/grails-forge-web-netty/resource-config.json
@@ -1,7 +1,11 @@
 {
-  "resources":[
-    {"pattern":"\\Qapplication.yml\\E"},
-    {"pattern":"\\Qlogback.xml\\E"}
+  "bundles":[
+    {"name":"org.eclipse.jgit.internal.JGitText"}
   ],
-  "bundles":[{"name":"org.eclipse.jgit.internal.JGitText"}]
+  "resources": {
+    "includes": [
+      {"pattern":"\\Qapplication.yml\\E"},
+      {"pattern":"\\Qlogback.xml\\E"}
+    ]
+  }
 }
