Remove the Groovydoc plugin use
This plugin causes a resolution error failure when releasing.
We switch to Gradle's groovydoc task instead, which shouldn't
be a problem because we have almost no Groovy classes in the
public API and it seems that Groovy docs are not published
as part of the documentation we build in `docs`.

--- a/buildSrc/src/main/groovy/org.grails.forge.internal.base-module.gradle
+++ b/buildSrc/src/main/groovy/org.grails.forge.internal.base-module.gradle
@@ -131,6 +131,6 @@ tasks.withType(GroovyCompile).configureEach {
     groovyOptions.forkOptions.jvmArgs.add('-Dgroovy.parameters=true')
 }
 
-tasks.withType(org.groovy.lang.groovydoc.tasks.GroovydocTask).configureEach {
+tasks.withType(Groovydoc).configureEach {
     classpath += project.configurations.documentation
 }
