--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -5,6 +5,7 @@ plugins {
 
 repositories {
     mavenCentral()
+    gradlePluginPortal()
 }
 
 configurations.all {
@@ -30,7 +31,6 @@ dependencies {
     implementation "com.diffplug.spotless:spotless-plugin-gradle:6.17.0"
     implementation "io.spring.nohttp:nohttp-gradle:0.0.11"
     implementation "gradle.plugin.com.github.johnrengelman:shadow:7.1.2"
-    implementation "io.github.groovylang.groovydoc:io.github.groovylang.groovydoc.gradle.plugin:1.0.1"
     implementation "io.github.gradle-nexus:publish-plugin:1.3.0"
 }
 
