--- a/grails-forge-core/src/main/resources/pom.xml
+++ b/grails-forge-core/src/main/resources/pom.xml
@@ -30,12 +30,12 @@
         <dependency>
             <groupId>org.grails</groupId>
             <artifactId>grails-gradle-plugin</artifactId>
-            <version>6.0.0-M2</version>
+            <version>6.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.grails.plugins</groupId>
             <artifactId>hibernate5</artifactId>
-            <version>7.3.1</version>
+            <version>8.0.0-M1</version>
         </dependency>
         <dependency>
             <groupId>org.grails.plugins</groupId>
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>org.asciidoctor.jvm.convert</groupId>
             <artifactId>asciidoctor-gradle-jvm</artifactId>
-            <version>2.1.0</version>
+            <version>4.0.0-alpha.1</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -85,7 +85,7 @@
         <dependency>
             <groupId>gradle.plugin.com.github.erdi.webdriver-binaries</groupId>
             <artifactId>webdriver-binaries-gradle-plugin</artifactId>
-            <version>2.7</version>
+            <version>3.0</version>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
@@ -125,7 +125,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.9.2</version>
+            <version>5.9.3</version>
         </dependency>
     </dependencies>
 </project>
