--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -13,6 +13,12 @@
         "^org\\.seleniumhq\\.selenium"
       ],
       "groupName": "selenium monorepo"
+    },
+    {
+      "matchPackagePatterns": [
+        "^com\\.bertramlabs\\.plugins:asset-pipeline"
+      ],
+      "groupName": "asset-pipeline"
     }
   ]
 }
