--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-projectVersion=6.0.0-M4
+projectVersion=6.0.0-SNAPSHOT
 micronautBuildVersion=1.1.5
 micronautDocsVersion=2.0.0
 micronautVersion=3.9.1
