--- a/settings.gradle
+++ b/settings.gradle
@@ -4,7 +4,11 @@ pluginManagement {
         mavenCentral()
     }
 }
-
+buildscript {
+    dependencies {
+        classpath 'org.antlr:antlr4-runtime:4.8-1!!'
+    }
+}
 plugins {
     id "com.gradle.enterprise" version "3.13.2"
     id 'com.gradle.common-custom-user-data-gradle-plugin' version '1.10'
