--- a/grails-forge-web-netty/build.gradle
+++ b/grails-forge-web-netty/build.gradle
@@ -37,3 +37,15 @@ micronaut {
         annotations("org.grails.forge.*")
     }
 }
+tasks.named('dockerfileNative') {
+    // https://www.graalvm.org/latest/docs/getting-started/container-images/
+    baseImage("ghcr.io/graalvm/jdk:ol8-java17-22.3.2")
+}
+
+tasks.named("dockerBuildNative") {
+    images = [project.hasProperty("dockerImageName") ? project.getProperty("dockerImageName") : "grailsforge"]
+}
+
+tasks.named("dockerBuild") {
+    images = [project.hasProperty("dockerImageName") ? project.getProperty("dockerImageName") : "grailsforge"]
+}
