--- a/.github/workflows/gcr-release.yml
+++ b/.github/workflows/gcr-release.yml
@@ -40,6 +40,7 @@ jobs:
           IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}:${{ steps.release_version.outputs.release_version }}"
           release_version: ${{ steps.release_version.outputs.release_version }}
         run: |
+          echo $IMAGE_NAME
           ./gradlew grails-forge-web-netty:dockerBuild -PdockerImageName="$IMAGE_NAME"
           ./gradlew grails-forge-web-netty:dockerPush -PdockerImageName="$IMAGE_NAME" 
           gcloud run deploy ${{ secrets.GCP_PROJECT_ID }}-latest --image $IMAGE_NAME --region us-central1 --platform managed --allow-unauthenticated
