--- a/.github/workflows/gcr-snapshot.yml
+++ b/.github/workflows/gcr-snapshot.yml
@@ -28,7 +28,8 @@ jobs:
       - name: Run Tests
         run: ./gradlew grails-forge-api:test grails-forge-web-netty:test
       - name: Build Docker image
-        run: |
+        # To deploy native executables built with GraalVM replace dockerBuild with dockerBuildNative and dockerPush with dockerPushNative. First, try that it works locally.
+        run: | 
           ./gradlew grails-forge-web-netty:dockerBuild -PdockerImageName="$IMAGE_NAME"
       - name: Push image to Google Cloud Container Registry
         run: |
