--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -123,6 +123,7 @@ jobs:
       - name: Build and Push Docker image and deploy to Cloud Run
         env:
           IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}:${{ steps.release_version.outputs.release_version }}
+        # To deploy native executables built with GraalVM replace dockerBuild with dockerBuildNative and dockerPush with dockerPushNative. First, try that it works locally.
         run: |
           echo $IMAGE_NAME
           ./gradlew grails-forge-web-netty:dockerBuild -PdockerImageName="$IMAGE_NAME"
