use kebap case for configuraiton

--- a/grails-forge-web-netty/src/main/resources/application.yml
+++ b/grails-forge-web-netty/src/main/resources/application.yml
@@ -9,7 +9,7 @@ micronaut:
       enabled: true
       configurations:
         web:
-          allowedOrigins:
+          allowed-origins:
             - https://grails.github.io
             - ${CORS_ALLOWED_ORIGIN:`^http(|s):\/\/grails\.org$`}
           allowedMethods:
