--- a/.github/workflows/analytics-gcr-snapshot.yml
+++ b/.github/workflows/analytics-gcr-snapshot.yml
@@ -1,4 +1,4 @@
-name: Snapshot to GCR
+name: Analytics Snapshot to GCR
 on:
   push:
     branches:
@@ -8,7 +8,7 @@ jobs:
     name: Setup Gcloud Account
     runs-on: ubuntu-latest
     env:
-      IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}:snapshot
+      IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}-analytics:snapshot
     steps:
       - name: Login
         uses: google-github-actions/setup-gcloud@v0
@@ -26,14 +26,14 @@ jobs:
           distribution: 'adopt'
           java-version: '11'
       - name: Run Tests
-        run: ./gradlew grails-forge-api:test grails-forge-web-netty:test
+        run: ./gradlew grails-forge-analytics-postgres:test
       - name: Build Docker image
         # To deploy native executables built with GraalVM replace dockerBuild with dockerBuildNative and dockerPush with dockerPushNative. First, try that it works locally.
         run: | 
-          ./gradlew grails-forge-web-netty:dockerBuild -PdockerImageName="$IMAGE_NAME"
+          ./gradlew grails-forge-analytics-postgres:dockerBuild -PdockerImageName="$IMAGE_NAME"
       - name: Push image to Google Cloud Container Registry
         run: |
-          ./gradlew grails-forge-web-netty:dockerPush -PdockerImageName="$IMAGE_NAME"
+          ./gradlew grails-forge-analytics-postgres:dockerPush -PdockerImageName="$IMAGE_NAME"
       - name: Deploy Docker image
-        run: gcloud run deploy ${{ secrets.GCP_PROJECT_ID }}-snapshot --image $IMAGE_NAME --region us-central1 --platform managed --allow-unauthenticated
+        run: gcloud run deploy ${{ secrets.GCP_PROJECT_ID }}-analytics-snapshot --image $IMAGE_NAME --region us-central1 --platform managed --allow-unauthenticated
 
