--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
-projectVersion=6.0.0-SNAPSHOT
+projectVersion=6.0.0-RC1
 micronautBuildVersion=1.1.5
 micronautDocsVersion=2.0.0
 micronautVersion=3.9.4
 rockerVersion=1.3.0
 groovyVersion=3.0.17
-grailsVersion=6.0.0-SNAPSHOT
+grailsVersion=6.0.0-RC1
 spockVersion=2.0-groovy-3.0
 title=Grails Application Forge
 projectDesc=Generates Grails applications
