--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -59,8 +59,9 @@ jobs:
         with:
           arguments: publishToSonatype
   deploy:
-    name: Setup Gcloud Account
+    name: Deploy To Google Cloud Run
     runs-on: ubuntu-latest
+    needs: [build]
     env:
       IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}:snapshot
     steps:
