--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -120,10 +120,10 @@ jobs:
       - name: Build Docker image
         # To deploy native executables built with GraalVM replace dockerBuild with dockerBuildNative and dockerPush with dockerPushNative. First, try that it works locally.
         run: |
-          ./gradlew grails-forge-analytics-postgres:dockerBuild -PdockerImageName="$IMAGE_NAME"
+          ./gradlew grails-forge-analytics-postgres:dockerBuildNative -PdockerImageName="$IMAGE_NAME"
       - name: Push image to Google Cloud Container Registry
         run: |
-          ./gradlew grails-forge-analytics-postgres:dockerPush -PdockerImageName="$IMAGE_NAME"
+          ./gradlew grails-forge-analytics-postgres:dockerPushNative -PdockerImageName="$IMAGE_NAME"
       - name: Deploy Docker image
         run: gcloud run deploy ${{ secrets.GCP_PROJECT_ID }}-analytics-snapshot --image $IMAGE_NAME --region us-central1 --platform managed --allow-unauthenticated
 
